--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ td { vertical-align: top; }
 #description {
 	position: absolute;
 	top: 0;
-	left: 10px;
+	left: 30px;
 	padding: 10px;
 	z-index: 99;
 	width: 940px;
@@ -335,7 +335,7 @@ a {
 }
 
 #filter-box {
-	margin: 100px 20px 20px 20px;
+	margin: 60px 20px 20px 20px;
 }
 
 #main {
@@ -423,4 +423,13 @@ svg {
 	top: 0;
 	right: 100px;
 	display: inline-block;
+}
+
+footer {
+	margin-top: 4em;
+	height: 6em;
+}
+
+footer section {
+	padding: 10px;
 }
